remove body tag duplicate

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>AngularJS PHP- upload and display image using FileReader with example</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<body>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 </head>
 <body ng-app="myApp" ng-controller="ImageController">
     <input type="file" ng-model="myFile" class="form-control" accept="image/*"  onchange="angular.element(this).scope().uploadedFile(this)">
