--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <input type="file" ng-model="myFile" class="form-control" accept="image/*"  onchange="angular.element(this).scope().uploadedFile(this)">
     <button ng-click = "uploadFile()">upload me</button>
     <br/>
-    <img ng-src="{{src}}" width="300">
+    <img ng-src="{{src}}" width="300" style="border: 1px solid #eee">
  <script type="text/javascript">
         var app =  angular.module('myApp',[]);
         // Here we write a custom service for upload file to reuse it in the controller
