Remoção da label

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input id="fileInput" ng-model="myFile" type="file" class="ng-hide" accept="image/*" onchange="angular.element(this).scope().uploadedFile(this)"/>
     <md-input-container flex class="md-block">
       <input type="text" ng-model="fileName" disabled>
-      <div class="hint">Select your file</div>
+      <!-- <div class="hint">Select your file</div> -->
     </md-input-container>
     <div>
       <md-button id="uploadButton" class="md-fab md-mini">
